--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "vant": "^2.8.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
